# wgent

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: config.rs  lib.rs  main.rs
src/commands/: command.rs  mod.rs  registry.rs
src/commands/builtin/: help.rs  mod.rs  new.rs
src/config/: config.rs  mod.rs
src/core/: agent.rs  conversation.rs  error.rs  message.rs  mod.rs  request.rs  response.rs  session.rs
src/llm/: anthropic.rs  error.rs  mod.rs  provider.rs  sse.rs  types.rs
src/logging/: logging.rs  mod.rs
src/prompt/: manager.rs  mod.rs
src/prompt/templates/: system.md  system.tera  tool_error.md  tool_error.tera  tool_result.md  tool_result.tera
src/term/: mod.rs  terminal.rs
src/tools/: mod.rs  registry.rs  tool.rs
src/tools/builtin/: bash.rs  edit.rs  grep.rs  ls.rs  mod.rs  multi_edit.rs  read.rs  sub_agent.rs  subagent.rs  web_fetch.rs  write.rs
src/transport/: mod.rs  transport.rs
src/utils/: format.rs  hash.rs  mod.rs  path.rs
