[package]
name = "wgent"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["cli"]

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures-util = "0.3"
tera = "1.20.1"
regex = "1.12.3"
ignore = "0.4.25"
uuid = { version = "1", features = ["v4"] }
