[package]
name = "wgent-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
wgent = { path = ".." }
tokio = { version = "1.52.1", features = ["full"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "3.1.1"
dotenvy = "0.15"
